--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.1.0",
     "q": "^1.4.1",
     "request": "^2.58.0",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "winston": "^2.2.0"
   }
 }
